// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalogGrid basic snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  width: calc(100% + 24px);
  margin: -12px;
}

.c1 {
  padding: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  box-sizing: border-box;
}

@media (min-width:600px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.33333%;
    -webkit-flex-basis: 33.33333%;
    -ms-flex-preferred-size: 33.33333%;
    flex-basis: 33.33333%;
  }
}

@media (min-width:960px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
</div>
`;

exports[`CatalogGrid custom min-width breakpoints snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  width: calc(100% + 24px);
  margin: -12px;
}

.c1 {
  padding: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  box-sizing: border-box;
}

@media (min-width:960px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.33333%;
    -webkit-flex-basis: 33.33333%;
    -ms-flex-preferred-size: 33.33333%;
    flex-basis: 33.33333%;
  }
}

@media (min-width:1280px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
</div>
`;

exports[`CatalogGrid custom placeholder image snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  width: calc(100% + 24px);
  margin: -12px;
}

.c1 {
  padding: 12px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin: 0;
  box-sizing: border-box;
}

@media (min-width:600px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 33.33333%;
    -webkit-flex-basis: 33.33333%;
    -ms-flex-preferred-size: 33.33333%;
    flex-basis: 33.33333%;
  }
}

@media (min-width:960px) {
  .c1 {
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
  <div
    className="c1"
  >
    CatalogGridItem(undefined)
  </div>
</div>
`;
